
exampledir = $(datarootdir)/examples/@PACKAGE@
hl87dir = $(exampledir)/hellaby87
flrwdir = $(exampledir)/flrw

hl87srcdir = $(hl87dir)/src
flrwsrcdir = $(flrwdir)/src

hl87_DATA = hellaby87/Makefile hellaby87/tm.py hellaby87/hl87.ipynb
flrw_DATA = flrw/Makefile flrw/FLRW.ipynb

hl87src_DATA = hellaby87/src/main.c hellaby87/src/hellaby87.c hellaby87/src/hellaby87.h
flrwsrc_DATA = flrw/src/main.c flrw/src/flrw.c flrw/src/flrw.h

dist_example_DATA = flrw hellaby87
