#pkglib_LIBRARIES = libltb.a
pkglib_LTLIBRARIES = libltb.la
libltb_la_SOURCES = ltb.c gsl_vector_help_functions.c phys_constant.c ltb_integrate.c interp_data.c
pkginclude_HEADERS = ltb.h gsl_vector_help_functions.h macros.h phys_constant.h ltb_error.h ltb_integrate.h interp_data.h
AM_CFLAGS = -fopenmp
